<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Equal</string>
    <string name="kakao_native_app_key">51512cf90930d7c0803cb56deafd000e</string>
    <string name="google_login_client_id">AIzaSyD3bqE0-2fLTTzNMmG8DuTmcYDvIYyE3wc</string>
    <string name="social_login_info_naver_client_id">muyx6R_mVa7TyQovFeBx</string>
    <string name="social_login_info_naver_client_secret">ZkbDGxdwxp</string>
    <string name="term_url">https://perpetcare.notion.site/af319244f86e42609469ef976e9c3b19</string>
    <string name="info_url">https://perpetcare.notion.site/3301a52983d54c799ca9d480eb05e1ee</string>
    <string name="qna_url">https://equal.pet/board/faq/Faq</string>
    <string name="maketing_url">https://perpetcare.notion.site/3-47047cc1e9234b519b177971ad117958</string>
    <string name="subscribe_url_1">https://perpetcare.notion.site/74c36c1cd6484702b4d6075568dbbd2f</string>
    <string name="subscribe_url_2">https://perpetcare.notion.site/3-608d564498ce4be092ce790dbf4674fa</string>
    <string name="channel_talk">831b3e1f-11a3-462a-b139-d3e106ae8c43</string>
    <string name="app_dialog_title_error">에러</string>
    <string name="app_dialog_message_network_connection_issue">잠시 후 다시 시도해 주세요</string>
    <string name="app_dialog_action_confirm">확인</string>
    <string name="app_dialog_action_cancel">취소</string>
    <string name="app_message_logout">계정이 로그아웃 되었습니다.</string>
    <string name="sign_success">환영합니다! 회원가입이 완료되었습니다</string>
    <string name="sign_error">이퀄은 반려동물 1:1 맞춤형 건강관리 서비스로 서비스 이용을 위해 반려동물 등록이 필요합니다.반려동물 등록을 종료하시면 로그아웃 됩니다.반려동물 등록을 종료하시겠습니까?</string>
    <string name="sign_error_1">등록중인 정보가 삭제됩니다.반려동물 등록을 종료하시겠습니까?</string>
    <string name="sign_error_2">로그아웃 하시겠습니까?</string>
    <string name="sign_error_3">결과 분석 시간이 길어지고 있습니다. 결과가 나오면 알림을 드리겠습니다.</string>
    <string name="subscribe_cancel">정말로 결제를 취소하시겠습니까?</string>
    <string name="medical_call">우리 아이 맞춤 영양제 추천을 위해서 문진을 완료해야합니다</string>
    <string name="day_time_picker_format_day" tools:ignore="ExtraTranslation">%d</string>
    <string name="cat">고양이</string>
    <string name="dog">강아지</string>
    <string name="male">남자아이</string>
    <string name="female">여자아이</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="kg">kg</string>
    <string name="etc">기타</string>
    <string name="submit">등록하기</string>
    <string name="detail_result">상세 결과</string>
    <string name="detail">상세보기</string>
    <string name="detail_u"><![CDATA[<font color=#01B763><u>상세보기</u></font>]]></string>
    <string name="detail_1_u"><![CDATA[<font color=#888888><u>상세정보</u></font>]]></string>
    <string name="price">%s원</string>
    <string name="change">변경</string>
    <string name="address_info">배송정보</string>
    <string name="add">추가</string>
    <string name="add_long">추가하기</string>
    <string name="delivery_fee">배송비</string>
    <string name="price_detail">원</string>
    <string name="today_check">Today’s Checkup</string>
    <string name="delete">삭제</string>
    <string name="month">%s개월</string>
    <string name="search_hint">검색어를 입력해주세요</string>
    <string name="yes_1">네</string>
    <string name="submit_1">등록완료</string>
    <string name="dialog_title">알림</string>
    <string name="edit">수정</string>
    <string name="edit_1">수정완료</string>
    <string name="product_price">상품가격: %s원</string>
    <string name="set">%s세트</string>
    <string name="detail_1">상세보기></string>
    <string name="login_title_comment">김수한무\n멍뭉이와 고양이 연구소</string>
    <string name="login_comment">이퀄은 반려동물의 건강 정보에 맞춰 영\n양제 패키지를 구성하여 배송하는 서비\n스 입니다.\n\n우리 아이를 위한 건강관리를 시작하시\n려면 소셜 계정을 통해서 로그인해 주세\n요.</string>
    <string name="login_login_comment">로그인 할 SNS를 선택해주세요</string>
    <string name="login_recent_type">최근 로그인</string>
    <string name="sign_comment_1">우리 아이는 강아지인가요? 고양이인가요?</string>
    <string name="sign_comment_2">사랑하는 우리 아이의 이름은 무엇인가요?</string>
    <string name="sign_comment_3">우리 아이 이름</string>
    <string name="sign_comment_4">%s의 품종은 무엇인가요?</string>
    <string name="sign_comment_5">품종 검색하기</string>
    <string name="sign_comment_6">%s의 성별은 무엇인가요?</string>
    <string name="sign_comment_7"><![CDATA[<font color=#01B763><u>why we asked?</u></font>]]></string>
    <string name="sign_comment_8">성별과 관련된 신진대사와 같은 여러 요인에 따라 필요한 영양소가 달라질 수 있습니다.</string>
    <string name="sign_comment_9">출산한 적이 있나요?</string>
    <string name="sign_comment_10">출산 경험이 있는 암컷 동물은 출산과 관련된 건강 문제, 예를 들어 출산 후 합병증, 자궁 문제 등에 노출될 수 있습니다. 이 정보를 통해 이러한 위험 요소를 관리하고 예방하는 데 도움이 됩니다.</string>
    <string name="sign_comment_11">현재 수유 중인가요?</string>
    <string name="sign_comment_12">아이에게 부족할 수 있는 영양성분을 파악하여 진단받은 질환에 따라 아이에게 권장되는 성분을 추천해 드립니다. </string>
    <string name="sign_comment_13">우리 %s, 태어난 날짜는 언제인가요?</string>
    <string name="sign_comment_14">나이에 따라 필요한 영양소가 달라질 수 있으며 답변을 바탕으로 아이의 생애주기에 알맞은 영양성분을 추천합니다.</string>
    <string name="sign_comment_15">생일 선택하기</string>
    <string name="sign_comment_16">%s의 몸무게는 몇 kg 인가요?</string>
    <string name="sign_comment_17">아이의 몸무게에 맞는 최적의 영양성분 복용량을 파악하는 데에 도움을 줍니다.</string>
    <string name="sign_comment_18">%s의 체형은 다음 그림 중 어느 것과 가장 비슷한가요?</string>
    <string name="sign_comment_19">BCS(신체상태점수)는 반려동물의 체중과 체형을 평가하는 중요한 지표로 이를 통해 아이가 건강한 체중을 유지하고 있는지를 판단할 수 있습니다.</string>
    <string name="sign_comment_20">저체중\n많이 말랐어요</string>
    <string name="sign_comment_21">약간 저체중\n마른 편이에요</string>
    <string name="sign_comment_22">정상\n딱 보기 좋아요</string>
    <string name="sign_comment_23">중비만\n조금 통통해요</string>
    <string name="sign_comment_24">고도비만\n뚱뚱해요</string>
    <string name="sign_comment_25">아이에게 불편하거나 아픈 부분이 있나요?\n(중복 선택 가능)</string>
    <string name="sign_comment_26">특정 질병은 반려동물의 영양소 필요량과 건강 관리 방법에 영향을 줍니다. 이 정보를 통해 질병에 맞는 맞춤형 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_27">주로 먹는 사료의 종류를 선택해주세요.</string>
    <string name="sign_comment_28">사료의 종류는 반려동물의 영양소 섭취 상태를 이해하는 데 중요합니다. 이 정보를 통해 사료에 부족한 영양소를 보충하는 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_29">동물성 단백질 일반 사료</string>
    <string name="sign_comment_30">식물성 단백질 일반 사료 (체중 감량용 포함)</string>
    <string name="sign_comment_31">처방사료 (Royal Canin, Hill\'s, Purina, Velixer 등)</string>
    <string name="sign_comment_32">화식류 제품 (기성제품, 동결건조, 구운 고기 등 함)</string>
    <string name="sign_comment_33">조리되지 않은 어류, 육류 (날고기 등)</string>
    <string name="sign_comment_34">%s의 활동 수준을 선택해주세요.</string>
    <string name="sign_comment_35">활동 수준은 반려동물의 에너지 소비량과 영양소 필요량을 결정하는 중요한 요소입니다. 이를 통해 활동 수준에 맞는 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_36">낮은 활동 수준 (주로 쉬거나 걷는다)</string>
    <string name="sign_comment_37">중간 활동 수준 (하루에 몇 차례 짧게 달린다)</string>
    <string name="sign_comment_38">높은 활동 수준 (하루에 긴 시간 동안 활발하게 움직인다)</string>
    <string name="sign_comment_39">아이가 주로 생활하는 공간은 어디인가요?</string>
    <string name="sign_comment_40">사료의 종류는 반려동물의 영양소 섭취 상태를 이해하는 데 중요합니다. 이 정보를 통해 사료에 부족한 영양소를 보충하는 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_41">실내 - 아파트, 빌라</string>
    <string name="sign_comment_42">실내 - 마당 있는 주택</string>
    <string name="sign_comment_43">실내 - 마당 없는 주택</string>
    <string name="sign_comment_44">실외 - 분리 거주 (마당 등)</string>
    <string name="sign_comment_45">주로 실내에서 생활하나요, 아니면 실외에서도 많은 시간을 보내나요?</string>
    <string name="sign_comment_46">실내와 실외에서의 생활은 반려동물의 건강 상태와 영양소 필요량에 영향을 미칩니다. 이 정보를 통해 생활 방식에 맞는 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_47">주로 실내</string>
    <string name="sign_comment_48">주로 실외</string>
    <string name="sign_comment_49">실내와 실외 모두</string>
    <string name="sign_comment_50">다른 반려동물과 함께 지내나요? 있다면 그 관계는 어떤가요?</string>
    <string name="sign_comment_51">반려동물과 다른 동물 간의 관계는 반려동물의 스트레스 수준과 행동에 영향을 미칠 수 있습니다. 이 정보를 통해 반려동물의 건강 관리 방안을 제안할 수 있습니다.</string>
    <string name="sign_comment_52">다른 동물이 없음</string>
    <string name="sign_comment_53">다른 동물이 있음, 매우 친밀함</string>
    <string name="sign_comment_54">다른 동물이 있음, 보통</string>
    <string name="sign_comment_55">다른 동물이 있음, 서로 신경 쓰지 않음</string>
    <string name="sign_comment_56">다른 동물이 있음, 서로 호전적임</string>
    <string name="sign_comment_57">혹시 특정 질병을 갖고 있나요? (복수 선택 가능)</string>
    <string name="sign_comment_58">특정 질병은 반려동물의 영양소 필요량과 건강 관리 방법에 영향을 줍니다. 이 정보를 통해 질병에 맞는 맞춤형 영양제를 추천할 수 있습니다.</string>
    <string name="sign_comment_59">아이가 특정 성분에 알레르기가 있나요?</string>
    <string name="sign_comment_60">언제 태어났나요?</string>
    <string name="sign_comment_61">+ “%s” 특수품종 등록하기</string>
    <string name="sign_comment_62">평소에 %s의 귀가 접혀있나요?</string>
    <string name="sign_comment_63">우리 아이는 중성화 수술을 받았나요?</string>
    <string name="sign_comment_64">아이에게 불편하거나 아픈 부분이 있나요? (중복 선택 가능)</string>
    <string name="sign_comment_65">진단받은 질병에 대해 치료하고 있나요?</string>
    <string name="sign_comment_66">최근 아이의 기력에 변화가 있었나요?</string>
    <string name="sign_comment_67">%s에게 사료는 얼마나 주시나요?</string>
    <string name="sign_comment_68">간식을 먹고 있나요?</string>
    <string name="sign_comment_69">평소 물을 얼마나 마시나요?</string>
    <string name="sign_comment_70">알레르기가 있는지 어떻게 알았나요?</string>
    <string name="sign_comment_71">하루에 산책을 얼마나 하나요?</string>
    <string name="sign_comment_72">동거묘 혹은 동거견이 있나요?</string>
    <string name="sign_comment_73">아이가 주로 생활하는 공간은 어디인가요?</string>
    <string name="sign_comment_74">아니요. 하지만 할 예정이에요</string>
    <string name="sign_comment_75">아니요. 앞으로도 계획이 없어요</string>
    <string name="sign_comment_76"><![CDATA[<font color=#888888><u>변경하기</u></font>]]></string>
    <string name="sign_comment_77">병원의 진단 및 처방에 따라 치료하고 있어요</string>
    <string name="sign_comment_78">병원에서 진단만 받았어요</string>
    <string name="sign_comment_79">평소보다 활기차졌거나, 특별히 변화하지 않았어요</string>
    <string name="sign_comment_80">평소보다 조금 기운이 없어보여요</string>
    <string name="sign_comment_81">눈에 띄게 기력이 없어요</string>
    <string name="sign_comment_82">동물병원 추천 또는 포장지에 적힌 정량만 줘요</string>
    <string name="sign_comment_83">동물병원 추천 또는 포장지에 적힌 정량보다 더 줘요</string>
    <string name="sign_comment_84">체중 감량이 필요하지는 않지만 동물병원 추천 또는 포장지에 적힌 정량보다 덜 줘요</string>
    <string name="sign_comment_85">체중 감량이 필요한 것 같아서 일부러 적게 주고 있어요</string>
    <string name="sign_comment_86">정량은 잘 모르지만 대략 정해서 주고 있어요</string>
    <string name="sign_comment_87">혼자 양을 조절해서 먹기 때문에 다 먹으면 채우고 있어서 잘 모르겠어요</string>
    <string name="sign_comment_88">줄었어요</string>
    <string name="sign_comment_89">비슷해요</string>
    <string name="sign_comment_90">늘었어요</string>
    <string name="sign_comment_91">최근 아이의 식욕에 변화가 있었나요?</string>
    <string name="sign_comment_92">알레르기가 있는지 어떻게 알았나요?</string>
    <string name="sign_comment_93">하루 1번</string>
    <string name="sign_comment_94">하루 2번</string>
    <string name="sign_comment_95">하루 3번 이상</string>
    <string name="sign_comment_96">매일 하지는 않아요</string>
    <string name="sign_comment_97">아니요</string>
    <string name="paperweight_comment14">결과 분석 중</string>
    <string name="paperweight_comment15">아이의 건강 지수와 취약한 부분을 분석 중이에요~ 조금만 기다려주세요</string>
    <string name="paperweight_comment17">문진 결과 확인</string>
    <string name="payment_comment2">구독에 사용중</string>
    <string name="payment_comment3">이용 목록</string>
    <string name="payment_comment4">카카오뱅크</string>
    <string name="payment_comment5">등록일: 2023. 07. 14</string>
    <string name="shipping_comment1">미사용 배송수단</string>
    <string name="shipping_comment2">이호진 / 010-4542-2363</string>
    <string name="shipping_comment3">대전 동구 판교2길 (판암동)</string>
    <string name="shipping_comment4">서비스 준비 지역</string>
    <string name="shipping_comment17">예) 판교역로 166, 분당 주공</string>
    <string name="shipping_comment18">tip</string>
    <string name="shipping_comment19">아래와 같은 조합으로 검색을 하시면 더욱 정확한 결과가 검색됩니다.</string>
    <string name="shipping_comment20">도로명 + 건물번호</string>
    <string name="shipping_comment21">예) 판교역로 166, 제주 청단로 242</string>
    <string name="shipping_comment22">지역명(동/리) + 번지</string>
    <string name="shipping_comment23">예) 백현동 532, 제주 영평동 1181</string>
    <string name="shipping_comment24">지역명(동/리) + 건물명(아파트명)</string>
    <string name="shipping_comment25">예) 분당 주공, 연수동 주공3차</string>
</resources>