<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="pet.perpet.equal.presentation.sign.viewmodel.SearchFlexItemViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/shipping_comment1"
            android:textColor="@color/text_hint_color"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_not_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/shipping_comment2"
            android:textColor="@color/text_hint_color"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_not_sub_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/shipping_comment3"
            android:textColor="@color/text_hint_color"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_not_bank" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/shipping_comment4"
            android:textColor="#ff8264"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_delete"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/black_radius_8"
            android:fontFamily="@font/gmarket_sans_medium"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="13dp"
            app:layout_constraintEnd_toStartOf="@id/tv_change"
            app:layout_constraintTop_toBottomOf="@id/tv_not_sub_bank" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/black_radius_8"
            android:fontFamily="@font/gmarket_sans_medium"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_not_sub_bank" />


        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/tv_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>