<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="pet.perpet.equal.presentation.more.viewmodel.shipping.BottomAddressSearchViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/base_bottom_alert_bg"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:src="@drawable/ic_bottom_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <pet.perpet.framework.widget.BaseEditText
                    android:id="@+id/ev_search"
                    setTextChangedListener="@{model.onAddressTextChange}"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/base_bottom_line_bg"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:hint="@string/shipping_comment17"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_close"
                    tools:ignore="DuplicateClickableBoundsCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@android:color/transparent"
                    android:visibility="@{model.address.length() > 0 ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/ev_search">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gmarket_sans_bold"
                        android:text="@string/shipping_comment18"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment19"
                        android:textColor="@color/text_hint_color"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_tip" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment20"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment21"
                        android:textColor="@color/text_hint_color"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment22"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint3" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment23"
                        android:textColor="@color/text_hint_color"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint4" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment24"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint5" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_hint7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/gmarket_sans_medium"
                        android:text="@string/shipping_comment25"
                        android:textColor="@color/text_hint_color"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint6" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <pet.perpet.framework.widget.recyclerview.BaseRecyclerView
                    recyclerview.layoutMediator="@{model.typeMediator}"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="16dp"
                    android:visibility="@{model.address.length() > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/ev_search" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>